--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet" href="../css/estilo.css">
 	<title>Proyectos</title>
 </head>
@@ -12,7 +15,7 @@
 	<div class="div-padrep">
 	<header class="border">
 		
-			<div class="logo1">
+			<div class="logo1 -- animate__animated animate__fadeIn ">
 			<img src="../assets/img/logo png.png" alt="logo11">
 		</div>
 	</header>
@@ -25,7 +28,7 @@
 				<li class="nav--item nav--item--color"><a href="../views/contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
-	<h2 class="articulostitulo -- border">Proyectos</h2>
+	<h2 class="articulostitulo -- animate__animated animate__bounce">Proyectos</h2>
 <section class="border">
 		<article class="proyectos">
 			<div class="a1"> <h1 class="articulos">Branding "Burger Stock"</h1>
